# py3-novellia-c92fgh

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  scratch_test.py  test_script.py
alembic/: env.py
alembic/versions/: 001_initial.py
app/: config.py  database.py  main.py
app/models/: imported_resources.py  records.py
app/requests/: transform.py
app/transformations/: extract.py  flatten.py  schema.py
app/utils/: dict.py
tests/: conftest.py
tests/config/: test_extraction_config.py
tests/models/: test_records.py
tests/transformations/: test_extract.py  test_flatten.py
