[project]
name = "py3-novellia-interview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "uvicorn[standard]>=0.30",
    "pytest>=9.0.3",
    "pydantic>=2.13.2",
    "ruff>=0.15.11",
    "alembic>=1.18.4",
    "pytest-asyncio>=1.3.0",
    "psycopg-binary>=3.3.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
